Fix calendar issues on mobile

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -42,6 +42,14 @@ $danger: #d63420;
     linear-gradient(90deg, $info, #574ca6);
 }
 
+.box.calendar {
+  padding: 0;
+
+  @include tablet {
+    padding: 1.25rem;
+  }
+}
+
 .section.calendar {
   padding: 3rem 0;
 
